build-sys: add SUID_LDFLAGS
Programs which are usually installed with the setuid bit do need their own
CFLAGS and LDFLAGS.  SUID_LDFLAGS is analogic to SUID_CFLAGS.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/login-utils/Makefile.am
+++ b/login-utils/Makefile.am
@@ -55,6 +55,10 @@ chfn_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 chsh_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 newgrp_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 
+chfn_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
+chsh_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
+newgrp_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
+
 if NEED_LIBCRYPT
 chfn_LDADD += -lcrypt
 chsh_LDADD += -lcrypt
