--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -13,16 +13,16 @@ MNTHDRS = fstab.h linux_fs.h mount_mntent.h mount_constants.h my_dev_t.h \
 	sundries.h
 mount_common = fstab.c sundries.c xmalloc.c realpath.c mount_mntent.c \
 	getusername.c get_label_uuid.c mount_by_label.c mount_blkid.c \
-	lomount.c $(MNTHDRS)
+	lomount.c $(MNTHDRS) ../lib/env.c
 
-mount_SOURCES = mount.c $(mount_common) \
+mount_SOURCES = mount.c $(mount_common) ../lib/setproctitle.c \
 	mount_guess_fstype.c
-mount_LDADD = $(top_srcdir)/lib/libenv.a $(top_srcdir)/lib/libsetproctitle.a
+mount_LDADD =
 mount_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 mount_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 
 umount_SOURCES = umount.c $(mount_common)
-umount_LDADD = $(top_srcdir)/lib/libenv.a
+umount_LDADD =
 umount_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 umount_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 
