build-sys: simplify "clean" in tests/Makefile.am
The construction with "distclean-local" does not seem necessary.
Moreover, Automake complains when "clean" is redefined.

Simply put the rm to "clean-local".

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -25,9 +25,5 @@ EXTRA_DIST = 	expected/* \
 		ts-mount-remount
 
 
-distclean-local:
+clean-local:
 	rm -rf output diff
-
-clean: distclean-local
-
-
