build-sys: use dist_noinst_DATA to work around the bug with dist_man_MANS
Automake mishandles dist_man_MANS.  Using dist_noinst_DATA to work
around this is more elegant than using dist-hook.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -7,3 +7,9 @@ mandir = $(datadir)/man
 AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include \
 	-DLOCALEDIR=\"$(localedir)\"
 AM_CFLAGS = -fsigned-char -fomit-frame-pointer
+
+# Automake (at least up to 1.10) mishandles dist_man_MANS inside conditionals.
+# Unlike with other dist primaries, the files are not distributed if the
+# conditional is false.
+# Work the bug around until it is fixed:
+dist_noinst_DATA = $(man_MANS)
