build-sys: move -D flags to *_CPPFLAGS
Preprocessor options belong to *_CPPFLAGS; add $(AM_CPPFLAGS) as we
want to amend it, not override.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/getopt/Makefile.am
+++ b/getopt/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/config/include-Makefile.am
 
 usrbinexec_PROGRAMS = getopt
 
-getopt_CFLAGS = -DLIBCGETOPT=1
+getopt_CPPFLAGS = -DLIBCGETOPT=1 $(AM_CPPFLAGS)
 
 man_MANS = getopt.1
 
