build-sys: s/AC_HELP_STRING/AS_HELP_STRING/
The macro has been renamed.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -78,7 +78,7 @@ AM_CONDITIONAL(HAVE_NCURSES, test x$have_ncurses = xyes)
 
 
 AC_ARG_WITH([slang],
-  AC_HELP_STRING([--with-slang], [compile cfdisk with slang]),
+  AS_HELP_STRING([--with-slang], [compile cfdisk with slang]),
   [], with_slang=no
 )
 
@@ -169,14 +169,14 @@ AM_CONDITIONAL(SPARC, test x$sparc = xtrue)
 
 
 AC_ARG_ENABLE([agetty],
-  AC_HELP_STRING([--disable-agetty], [do not build agetty]),
+  AS_HELP_STRING([--disable-agetty], [do not build agetty]),
   [], enable_agetty=yes
 )
 AM_CONDITIONAL(BUILD_AGETTY, test x$enable_agetty = xyes)
 
 
 AC_ARG_ENABLE([cramfs],
-  AC_HELP_STRING([--disable-cramfs], [do not build fsck.cramfs, mkfs.cramfs]),
+  AS_HELP_STRING([--disable-cramfs], [do not build fsck.cramfs, mkfs.cramfs]),
   [], enable_cramfs=check
 )
 
@@ -194,83 +194,83 @@ AM_CONDITIONAL(BUILD_CRAMFS, test $build_cramfs = yes)
 
 
 AC_ARG_ENABLE([elvtune],
-  AC_HELP_STRING([--enable-elvtune], [build elvtune (only works with 2.2 and 2.4 kernels)]),
+  AS_HELP_STRING([--enable-elvtune], [build elvtune (only works with 2.2 and 2.4 kernels)]),
   [], enable_elvtune=no
 )
 AM_CONDITIONAL(BUILD_ELVTUNE, test x$enable_elvtune = xyes)
 
 
 AC_ARG_ENABLE([init],
-  AC_HELP_STRING([--enable-init], [build simpleinit, shutdown, initctl]),
+  AS_HELP_STRING([--enable-init], [build simpleinit, shutdown, initctl]),
   [], enable_init=no
 )
 AM_CONDITIONAL(BUILD_INIT, test x$enable_init = xyes)
 
 
 AC_ARG_ENABLE([kill],
-  AC_HELP_STRING([--enable-kill], [build kill]),
+  AS_HELP_STRING([--enable-kill], [build kill]),
   [], enable_kill=no
 )
 AM_CONDITIONAL(BUILD_KILL, test x$enable_kill = xyes)
 
 
 AC_ARG_ENABLE([last],
-  AC_HELP_STRING([--enable-last], [build last]),
+  AS_HELP_STRING([--enable-last], [build last]),
   [], enable_last=no
 )
 AM_CONDITIONAL(BUILD_LAST, test x$enable_last = xyes)
 
 
 AC_ARG_ENABLE([mesg],
-  AC_HELP_STRING([--enable-mesg], [build mesg]),
+  AS_HELP_STRING([--enable-mesg], [build mesg]),
   [], enable_mesg=no
 )
 AM_CONDITIONAL(BUILD_MESG, test x$enable_mesg = xyes)
 
 
 AC_ARG_ENABLE([partx],
-  AC_HELP_STRING([--enable-partx], [build addpart, delpart, partx]),
+  AS_HELP_STRING([--enable-partx], [build addpart, delpart, partx]),
   [], enable_partx=no
 )
 AM_CONDITIONAL(BUILD_PARTX, test x$enable_partx = xyes)
 
 
 AC_ARG_ENABLE([raw],
-  AC_HELP_STRING([--enable-raw], [build raw]),
+  AS_HELP_STRING([--enable-raw], [build raw]),
   [], enable_raw=no
 )
 AM_CONDITIONAL(BUILD_RAW, test x$enable_raw = xyes)
 
 
 AC_ARG_ENABLE([rdev],
-  AC_HELP_STRING([--enable-rdev], [build rdev on i386]),
+  AS_HELP_STRING([--enable-rdev], [build rdev on i386]),
   [], enable_rdev=no
 )
 AM_CONDITIONAL(BUILD_RDEV, test x$enable_rdev = xyes)
 
 
 AC_ARG_ENABLE([rename],
-  AC_HELP_STRING([--disable-rename], [do not build rename]),
+  AS_HELP_STRING([--disable-rename], [do not build rename]),
   [], enable_rename=yes
 )
 AM_CONDITIONAL(BUILD_RENAME, test x$enable_rename = xyes)
 
 
 AC_ARG_ENABLE([reset],
-  AC_HELP_STRING([--enable-reset], [build reset]),
+  AS_HELP_STRING([--enable-reset], [build reset]),
   [], enable_reset=no
 )
 AM_CONDITIONAL(BUILD_RESET, test x$enable_reset = xyes)
 
 
 AC_ARG_ENABLE([login-utils],
-  AC_HELP_STRING([--enable-login-utils], [build chfn, chsh, login, newgrp, vipw]),
+  AS_HELP_STRING([--enable-login-utils], [build chfn, chsh, login, newgrp, vipw]),
   [], enable_login_utils=no
 )
 AM_CONDITIONAL(BUILD_LOGIN_UTILS, test x$enable_login_utils = xyes)
 
 AC_ARG_WITH([pam],
-  [AC_HELP_STRING([--without-pam], [compile login-utils without PAM support])])
+  [AS_HELP_STRING([--without-pam], [compile login-utils without PAM support])])
 
 AM_CONDITIONAL(HAVE_PAM, false)
 if test x$enable_login_utils = xyes && test x$with_pam != xno; then
@@ -283,7 +283,7 @@ if test x$enable_login_utils = xyes && test x$with_pam != xno; then
 fi
 
 AC_ARG_WITH([selinux],
-  AC_HELP_STRING([--with-selinux], [compile with SELinux support]),
+  AS_HELP_STRING([--with-selinux], [compile with SELinux support]),
   [], with_selinux=no
 )
 
@@ -298,7 +298,7 @@ fi
 
 
 AC_ARG_WITH([audit],
-  AC_HELP_STRING([--with-audit], [compile with audit support]),
+  AS_HELP_STRING([--with-audit], [compile with audit support]),
   [], with_audit=no
 )
 
@@ -315,28 +315,28 @@ fi
 
 
 AC_ARG_ENABLE([schedutils],
-  AC_HELP_STRING([--disable-schedutils], [do not build chrt, ionice, teskset]),
+  AS_HELP_STRING([--disable-schedutils], [do not build chrt, ionice, teskset]),
   [], enable_schedutils=yes
 )
 AM_CONDITIONAL(BUILD_SCHEDUTILS, test x$enable_schedutils = xyes)
 
 
 AC_ARG_ENABLE([wall],
-  AC_HELP_STRING([--disable-wall], [do not build wall]),
+  AS_HELP_STRING([--disable-wall], [do not build wall]),
   [], enable_wall=yes
 )
 AM_CONDITIONAL(BUILD_WALL, test x$enable_wall = xyes)
 
 
 AC_ARG_ENABLE([write],
-  AC_HELP_STRING([--enable-write], [build write]),
+  AS_HELP_STRING([--enable-write], [build write]),
   [], enable_write=no
 )
 AM_CONDITIONAL(BUILD_WRITE, test x$enable_write = xyes)
 
 
 AC_ARG_ENABLE([chsh-only-listed],
-  AC_HELP_STRING([--disable-chsh-only-listed], [chsh: allow shells not in /etc/shells]),
+  AS_HELP_STRING([--disable-chsh-only-listed], [chsh: allow shells not in /etc/shells]),
   [], enable_chsh_only_listed=yes
 )
 
@@ -346,7 +346,7 @@ fi
 
 
 AC_ARG_ENABLE([login-chown-vcs],
-  AC_HELP_STRING([--enable-login-chown-vcs], [let login chown /dev/vcsN]),
+  AS_HELP_STRING([--enable-login-chown-vcs], [let login chown /dev/vcsN]),
   [], enable_login_chown_vcs=no
 )
 
@@ -356,7 +356,7 @@ fi
 
 
 AC_ARG_ENABLE([login-stat-mail],
-  AC_HELP_STRING([--enable-login-stat-mail], [let login stat() the mailbox]),
+  AS_HELP_STRING([--enable-login-stat-mail], [let login stat() the mailbox]),
   [], enable_login_stat_mail=no
 )
 
@@ -366,7 +366,7 @@ fi
 
 
 AC_ARG_ENABLE([pg-bell],
-  AC_HELP_STRING([--disable-pg-bell], [let pg not ring the bell on invalid keys]),
+  AS_HELP_STRING([--disable-pg-bell], [let pg not ring the bell on invalid keys]),
   [], enable_pg_bell=yes
 )
 
@@ -376,7 +376,7 @@ fi
 
 
 AC_ARG_ENABLE([require-password],
-  AC_HELP_STRING([--disable-require-password], [do not require the user to enter the password in chfn and chsh]),
+  AS_HELP_STRING([--disable-require-password], [do not require the user to enter the password in chfn and chsh]),
   [], enable_require_password=yes
 )
 
@@ -386,7 +386,7 @@ fi
 
 
 AC_ARG_ENABLE([use-tty-group],
-  AC_HELP_STRING([--disable-use-tty-group], [do not install wall and write setgid tty]),
+  AS_HELP_STRING([--disable-use-tty-group], [do not install wall and write setgid tty]),
   [], enable_use_tty_group=yes
 )
 AM_CONDITIONAL(USE_TTY_GROUP, test x$enable_use_tty_group = xyes)
