build-sys: make the getopt example directory relative to datadir
Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/getopt/Makefile.am
+++ b/getopt/Makefile.am
@@ -6,7 +6,7 @@ getopt_CPPFLAGS = -DLIBCGETOPT=1 $(AM_CPPFLAGS)
 
 man_MANS = getopt.1
 
-exampledir = $(prefix)/usr/share/getopt/
+exampledir = $(datadir)/getopt/
 dist_example_DATA = getopt-parse.bash getopt-parse.tcsh \
 	getopt-test.bash getopt-test.tcsh
 
