build-sys: let configure instantiate the misc-utils/*.pl scripts
The substitution of @PERL@ is most done with AC_CONFIG_FILES.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -466,6 +466,8 @@ text-utils/Makefile
 tests/Makefile
 tests/helpers/Makefile
 tests/commands.sh
+misc-utils/chkdupexe:misc-utils/chkdupexe.pl
+misc-utils/scriptreplay:misc-utils/scriptreplay.pl
 ])
 
 AC_OUTPUT
