build-sys: use dist_usrbinexec_SCRIPTS in misc-utils/Makefile.am
A slightly more concise way to distribute the script "reset".

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -1,8 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = 	README.* \
-		reset \
-		reset.033c
+EXTRA_DIST = 	README.*
 
 bin_PROGRAMS =
 
@@ -48,9 +46,10 @@ man_MANS += rename.1
 endif
 
 if BUILD_RESET
-usrbinexec_SCRIPTS += reset
+dist_usrbinexec_SCRIPTS = reset
 man_MANS += reset.1
 endif
+EXTRA_DIST += reset.033c
 
 if BUILD_WRITE
 
